update opponent button border color and hover effects; add new game images; fix HTML spacing in scoreboard

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ th {
 
 .opponent-button {
     background-color: rgb(35, 59, 121);
-    border: 0.5rem solid rgb(164, 194, 255);
+    border: 0.5rem solid rgb(141, 173, 236);
     border-radius: 50%;
     padding: 0.2rem;
     width: 10%;
@@ -196,8 +196,8 @@ th {
 }   
 
 button.opponent-button:hover {
-    background-color: rgb(255, 149, 0);
-    border: 0.5rem solid #27586c;
+    background-color: rgb(174, 255, 0);
+    border: 0.5rem solid #6bd5ff;
     box-shadow: #f9f9f9 0 0.1rem 0.3rem 0.5rem  ;
     transition: 0.1s;
 }
@@ -281,11 +281,7 @@ button.opponent-button:active {
     transition: 0.1s;
 }
 
-/* #reset-btn:active {
-  background: rgb(255, 123, 100);
-  color: rgb(63, 0, 68);
-  box-shadow: #a5f838 0 0.1rem 0.3rem 0.2rem;
-} */
+
 
 #movesPictures {
   display: flex;
@@ -318,8 +314,15 @@ button.opponent-button:active {
   color: rgb(0, 40, 53);
   font-weight: 800;
   border: 0.3rem solid #007910;
-  box-shadow: #85ff19 0 0.1rem 0.3rem 0.5rem;
+  box-shadow: #85ff19 0 0.1rem 0.4rem 0.5rem;
 transition: 0.1s;
+}
+
+.move-button:active {
+  background: rgb(226, 13, 6);
+  color:rgb(141, 253, 233) ;
+  box-shadow: #a5f838 0 0.1rem 0.1rem 0.5rem;
+    transition: 0.5sec smooth;
 }
 
 .selections {
